# HoorMovies

./: .gitignore  README.md  docker-compose.yml  init.sql  justfile
.github/workflows/: github-actions.yml
movies/: .env.template  .flake8  pyproject.toml  pytest.ini
movies/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
movies/accounts/migrations/: 0001_initial.py  0002_initial.py
movies/cinema/: settings.py  urls.py
movies/manage_movies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
movies/manage_movies/management/commands/: create_superuser.py  fill_db.py
movies/manage_movies/migrations/: 0001_initial.py  0002_alter_film_box_office_alter_film_budget.py  0002_alter_rating_content_type.py  0002_author_film.py  0003_genre_author_biography_author_death_date_and_more.py  0003_remove_film_author_film_authors.py  0004_alter_spectator_options_alter_film_box_office_and_more.py  0005_spectator_favorites_alter_film_rating_and_more.py
movies/manage_movies/services/: tmdb.py  tmdb_client.py
movies/manage_movies/tests/: test_tmdb_client.py  test_utils.py  tests_utils.py
movies/manage_movies/tests/mocks/: director_details.json  genres.json  movie_credits.json  movie_details.json  popular_movies.json  upcoming_movies.json
movies/manage_movies/utils/: utils.py
movies/scripts/: init_cinema.sh
scripts/: init_db.sql
